k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-api-deployment
  labels:
    app: node-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-api
  template:
    metadata:
      labels:
        app: node-api
    spec:
      containers:
        - name: node-api
          image: 166463094434.dkr.ecr.ap-northeast-2.amazonaws.com/node-api-app:v2
          ports:
            - containerPort: 3000
