k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-api-service
spec:
  type: LoadBalancer
  selector:
    app: node-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
